app/components/buttons/EyeFilterMenu/EyeFilterMenu.module.css
.menu {
  margin-left: 0.5em;
  position: relative;
}

.menu.open::after {
  content: "";
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid var(--background-back-color);
  position: absolute;
  top: 30px;
  right: 10px;
  transition: all 100ms ease-in-out;
}

.menuButton {
  height: 31px;
  width: 40px;
  padding: 0px;
}

.buttonIcon {
  background-position: 6px 5px;
  background-repeat: no-repeat;
  background-size: 13px 10px;
  width: 40px;
  height: 20px;
  border-radius: 4px;
  padding: 0px;
  background-image: var(--contextbutton-eye-default-icon);
  background-color: var(--text-toggle-button-inactive-text);
}

.buttonIcon.sortBy {
  background-image: var(--sort-by-icon);
}

.buttonIcon::after {
  content: "";
  border-color: var(--filter-menu-arrow) transparent transparent;
  border-style: solid;
  border-width: 5px 5px 2.5px;
  height: 0;
  width: 0;
  top: 13px;
  left: 10px;
  position: relative;
}

.buttonIcon:hover {
  background-color: var(--filter-menu-bg-hover);
}

.buttonIcon.disabled {
  background-image: var(--contextbutton-eye-disabled-icon);
}

.buttonIcon.disabled:hover {
  background-color: var(--stroke-color-hovered);
}

.buttonIcon:disabled {
  background-image: var(--contextbutton-eye-disabled-icon);
}

.menuItems {
  border-radius: 5px;
  background-color: var(--background-back-color);
  position: absolute;
  right: 0px;
  padding: 8px 0px;
  width: 168px;
  color: var(--input-color-default);
  text-align: left;
  box-shadow: 0px 3px 8px var(--input-color-shadow);
  user-select: none;
}

.menuItems.sortBy {
  width: 220px;
  padding-bottom: 0;
}

.contextMenuItem {
  font-size: 13px;
  line-height: 2em;
  min-width: 10em;
  padding-left: 28px;
  padding-bottom: 5px;
}

.contextMenuItem:hover {
  background-color: var(--white-border);
}

.contextMenuItem.selected::before {
  content: "";
  height: 10px;
  width: 10px;
  background-image: var(--checkmark-context-icon);
  background-repeat: no-repeat;
  position: absolute;
  margin-left: -18px;
  margin-top: 9px;
}

.arrowUp {
  float: right;
  margin-top: -13px;
  margin-right: 23px;
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 5px solid var(--background-back-color);
}

